--- a/trunk/gruz.web/src/main/webapp/css/style.css
+++ b/trunk/gruz.web/src/main/webapp/css/style.css
@@ -1,15 +1,20 @@
 body {
-    font-family: Arial;
+    font-family: Arial, sans-serif;
 }
 
 #header {
-    background-color: navy;
+    background-color: #243b80;
+}
+
+#footer {
+    background-color: #243b80;
 }
 
 #title {
     color: white;
     font-size: 18px;
     font-weight: bolder;
+    margin-left: 2.5em;
 }
 
 #container {
@@ -17,9 +22,4 @@ body {
     padding-left: 1.5em;
     position: relative;
     z-index: 0;
-}
-
-h3.title {
-    margin-top: 0em;
-    margin-bottom: 1em;
 }
